add com.ginkgostreet.multiform extension; also create symlinks to extension directories in project root;

--- a/drupal-civi-vol/drush.make.tmpl
+++ b/drupal-civi-vol/drush.make.tmpl
@@ -74,6 +74,13 @@ libraries[civivolunteer][download][url] = git@github.com:ginkgomzd/civivolunteer
 libraries[civivolunteer][download][branch] = master
 libraries[civivolunteer][overwrite] = TRUE
 
+libraries[multiform][destination] = modules
+libraries[multiform][directory_name] = civicrm/tools/extensions/com.ginkgosreet.multiform
+libraries[multiform][download][type] = git
+libraries[multiform][download][url] = git@github.com:ginkgostreet/civicrm_multiform.git
+libraries[multiform][download][branch] = master
+libraries[multiform][overwrite] = TRUE
+
 ; ****************************************
 ; Developer modules
 ; ****************************************
